# nlw-2402

./: .gitignore  app.py  pyproject.toml
src/data/: attendees_handler.py  check_ins_handler.py  event_handler.py
src/errors/: error_handler.py  http_conflict.py  http_not_found.py
src/http_types/: http_request.py  http_response.py
src/main/server/: server.py
src/main/server/routes/: attendees_routes.py  check_ins_routes.py  event_routes.py
src/models/entities/: attendees.py  check_ins.py  events.py
src/models/repository/: attendees_repository.py  attendees_repository_test.py  check_ins_repository.py  events_repository.py  events_repository_test.py
src/models/settings/: connection.py
