[tool.poetry]
name = "pass-in"
version = "0.1.0"
description = ""
authors = ["Fabricio Zillig <fabricio.zillig@gmail.com>"]
readme = "README.md"
packages = [{include = "pass"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
