[tool.poetry]
name = "pass-in"
version = "0.1.0"
description = ""
authors = ["Fabricio Zillig <fabricio.zillig@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
